  - Fix: profiler CPU & DSP cycles information is for previous instruction
  - Fix: WinUAE CPU requires cycles counter usage for getting current
    CPU instruction cycles
  - Profiler provides timing information, based on used cycles
  - Profiler provides CPU instruction cache misses information when using
    cycle-exact WinUAE CPU core (which is Falcon emu default)
  - For DSP, profiler adds min/max cycle difference info to disassembly
  - New "addresses" subcommand can be used to see addresses through which
    code passed during profiling (e.g. while program seems frozen, this
    gives much better overview of code that is being run, than cpu trace)
  - New "callers" subcommand lists all addresses from which loaded
    symbols' addresses were "called" from.  This way one can e.g. find
    in which contexts interrupt handlers were called and it can be
    used to construction program execution callgraph
  - New "save" subcommand saves profile address and caller information
    to given file, with extra information needed for post-processing
  - New hatari-profiler.py script for post-processing output from
    profiler's CPU and DSP profiling "save" commands:
	profile save <filename>
	dspprofile save <filename>
    - With symbol address information it can provide function level
      instruction, processor cycle & i-cache miss statistics, and
      function call callgraphs
- Debugger:
  - "dsp" subcommand added to "info" command, to show e.g. DSP stack content
  - "step" and "next" commands added for single stepping CPU and DSP code
    -> 's' shortcut is now for "step", not "save"
  - "--disasm" option for selecting between UAE core and external CPU
    code dissassembler and setting output option flags for latter
  - Fix: when several breakpoints should have triggered
         on the same address, only first was handled
  - Fix: after breakpoint, 'c <n>' continues one instruction too little
  - Fix: info command crash (triggered on NetBSD)